--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
-    "es"
+    "es",
+    "src/chat"
   ],
   "scripts": {
     "dev": "vant-cli dev",
