--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fkjs/qtui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "lib/qtui.js",
   "module": "es/index.js",
@@ -29,8 +29,8 @@
     "*.{ts,tsx,js,vue}": "eslint --fix"
   },
   "peerDependencies": {
-    "vue": "^3.2.25",
-    "svgaplayerweb":"^2.3.2"
+    "svgaplayerweb": "^2.3.2",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vant/cli": "^6.0.0",
@@ -38,6 +38,7 @@
     "prettier": "^3.0.0",
     "sass": "^1.49.7",
     "svgaplayerweb": "^2.3.2",
+    "typescript": "^5.1.6",
     "vue": "^3.2.25"
   },
   "prettier": {
