--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@vant/cli": "^6.0.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-prettier": "^5.0.0-alpha.1",
     "prettier": "^3.0.0",
     "sass": "^1.49.7",
     "svgaplayerweb": "^2.3.2",
-    "typescript": "^4.5.4",
+    "typescript": "^5.1.6",
     "vue": "^3.2.25"
   },
   "prettier": {
