--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
       - name: install
-        run: npm i pnpm -g && pnpm i
+        run: npm i pnpm@7 -g && pnpm i
       - name: build
         run: npm run build
       - name: publish
